--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_Image"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/tv_Object1"
+            <Button
+                android:id="@+id/btn_gray_process"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_proc" />
+
+            <Button
+                android:id="@+id/btn_open_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_open" />
+
+            <Button
+                android:id="@+id/btn_close_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_close" />
+
+        </LinearLayout>
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="666"/>
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tv_Object2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="444"/>
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/str_desc"/>
 
-    <TextView
-        android:id="@+id/tv_Matches"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="777"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_Time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="333"/>
 </LinearLayout>
 
